--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* 
-Theme Name: Vetskitchen 
+Theme Name: Vet's Kitchen 
 Version: 1.0 
 Description: A custom theme dedicated for Vet's Kitchen. 
 Text Domain: vetskitchen
