header - fix tabs | initial footer layout

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -3,6 +3,8 @@ $primary: #005f58;
 $white: #ffffff;
 $black: #000000;
 $gray: #777777;
+$gray2: #4d4d4d;
+$lgray: #b1aca8;
 $orange: #eb8f2e;
 $pale: #fff3eb;
 
