--- a/assets/scss/layout/_icon-banner.scss
+++ b/assets/scss/layout/_icon-banner.scss
@@ -1,7 +1,7 @@
 
 .vk-icon-banner {
     position: relative;
-    padding: 50px 20px 20px;
+    padding: 50px 20px;
 
     &__row {
         display: flex;
