--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -4,9 +4,12 @@ $white: #ffffff;
 $black: #000000;
 $gray: #777777;
 $gray2: #4d4d4d;
+$gray3: #888888;
 $lgray: #b1aca8;
 $orange: #eb8f2e;
+$orange2: #ff8f00;
 $pale: #fff3eb;
+$aliceblue: #f7f8fa;
 
 //
 $base-url: '../' !default;
