--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -10,3 +10,9 @@ body a:where(:not(.wp-element-button)) {
         text-decoration: underline;
     }
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Signika', sans-serif;
+    font-weight: 600;
+    color: $primary;
+}
