--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,7 +17,8 @@
 
 // 4. Components
 @import
-  'components/button';
+  'components/button',
+  'components/back-to-top';
 
 // 5. Layout-related sections
 @import
