--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -6,10 +6,12 @@ $gray: #777777;
 $gray2: #4d4d4d;
 $gray3: #888888;
 $lgray: #b1aca8;
+$lgray2: #c3c3c3;
 $orange: #eb8f2e;
 $orange2: #ff8f00;
 $pale: #fff3eb;
 $aliceblue: #f7f8fa;
+$dark: #191919;
 
 //
 $base-url: '../' !default;
