footer mobile | collapsible menu

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -7,11 +7,15 @@ $gray2: #4d4d4d;
 $gray3: #888888;
 $lgray: #b1aca8;
 $lgray2: #c3c3c3;
+$lgray3: #e9e7e7;
 $orange: #eb8f2e;
 $orange2: #ff8f00;
 $pale: #fff3eb;
 $aliceblue: #f7f8fa;
 $dark: #191919;
+$green2: #008077;
+$blue: #2879fe;
+$rose: #c3416c;
 
 //
 $base-url: '../' !default;
