--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,6 +1,8 @@
 
 .footer {
     &__main {
+        font-size: 14px;
+        color: $gray3;
         background-color: $aliceblue;
 
         &-title {
