--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -5,6 +5,7 @@ $black: #000000;
 $gray: #777777;
 $gray2: #4d4d4d;
 $gray3: #888888;
+$gray4: #808080;
 $lgray: #b1aca8;
 $lgray2: #c3c3c3;
 $lgray3: #e9e7e7;
