--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,7 +3,8 @@
 // 1. Configuration and helpers
 @import
   'abstract/variables',
-  'abstract/mixins';
+  'abstract/mixins',
+  'abstract/keyframes';
 
 // 2. Third Party
 
