--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -224,11 +224,30 @@
                                 .mega-menu-column {
                                     width: 175px;
                                 }
+
+                                &.flex-wrap {
+                                    & > .mega-sub-menu {
+                                        flex-wrap: wrap;
+                                    }
+
+                                    .mega-menu-column {
+                                        width: 135px;
+                                    }
+                                }
+
+                                &.bold .mega-sub-menu .mega-menu-link {
+                                    font-weight: 700;
+                                    line-height: 18px;
+                                }
                             }
                         }
 
                         &:last-of-type > ul.mega-sub-menu {
                             transform: translateY(13px) translate(-50%) !important;
+                        }
+
+                        &.mega-menu-megamenu {
+                            position: relative;
                         }
                     }
                 }
