--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -16,3 +16,33 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     color: $primary;
 }
+
+h1 {
+    font-size: 48px;
+    line-height: 54px;
+}
+
+h2 {
+    font-size: 34px;
+    line-height: 44px;
+}
+
+h3 {
+    font-size: 30px;
+    line-height: 40px;
+}
+
+h4 {
+    font-size: 24px;
+    line-height: 34px;
+}
+
+h5 {
+    font-size: 20px;
+    line-height: 30px;
+}
+
+h6 {
+    font-size: 16px;
+    line-height: 26px;
+}
