--- a/blocks/flavour-columns/style.scss
+++ b/blocks/flavour-columns/style.scss
@@ -1,3 +1,49 @@
-body {
-    height: auto;
+ul.mega-sub-menu {
+    display: none !important;
+}
+
+.vetskitchen-flavour-columns {
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 30px 0;
+        text-align: center;
+    }
+
+    .wrapper-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100px;
+        height: 100px;
+    }
+
+    .icon {
+        width: auto;
+        height: 100%;
+    }
+
+    .title {
+        padding: 10px 0 20px;
+        margin: 0;
+        font-family: "Signika";
+        font-weight: normal;
+        font-style: normal;
+        font-size: 30px;
+        color: #5e5e5e;
+    }
+
+    .description {
+        font-family: "Hind";
+        font-weight: 300;
+        font-size: 18px;
+        color: #000;
+    }
+
+    @media (max-width: 575px) {
+        .title {
+            padding-bottom: 15px;
+        }
+    }
 }
