--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -250,6 +250,11 @@
                             position: relative;
                         }
                     }
+
+                    .mobile-menu__back-btn,
+                    .mobile-menu__title {
+                        display: none;
+                    }
                 }
             }
         }
@@ -324,50 +329,151 @@
                 max-width: 100%;
             }
 
-            #mega-menu-wrap-primary #mega-menu-primary>li.mega-menu-item>a.mega-menu-link>img {
-                display: none;
+            #mega-menu-wrap-primary #mega-menu-primary {
+                & > li.mega-menu-item>a.mega-menu-link>img {
+                    display: none;
+                }
+
+                .mega-menu-item-has-children {
+                    position: static;
+
+                    & > .mega-sub-menu {
+                        position: absolute !important;
+                        top: 0;
+                        left: 0;
+                        z-index: 1;
+                        display: block !important;
+                        padding: 0 !important;
+                        width: 100%;
+                        height: 100vh !important;
+                        overflow-y: auto;
+                        background-color: $white;
+                        transform: translate3d(100%, 0, 0);
+                        transition: transform .3s ease-in-out;
+                        visibility: visible;
+
+                        .mega-menu-row {
+                            position: static;
+
+                            ul.mega-sub-menu,
+                            li.mega-menu-column {
+                                position: static;
+                            }
+                        }
+                    }
+
+                    &.mega-toggle-on > .mega-sub-menu {
+                        transform: translate3d(0, 0, 0);
+                    }
+                }
+
+                li.mega-menu-item {
+                    a.mega-menu-link,
+                    & > ul.mega-sub-menu li.mega-menu-column > ul.mega-sub-menu > li.mega-menu-item > a.mega-menu-link {
+                        padding: 9px 27px 9px 30px !important;
+                        font-family: 'Hind', sans-serif !important;
+                        font-weight: 400 !important;
+                        line-height: 22px;
+                        color: $dark !important;
+
+                        .mega-indicator {
+                            display: none !important;
+                        }
+
+                        &:hover {
+                            color: $green2 !important;
+                            text-decoration: none !important;
+                        }
+                    }
+
+                    &.mega-menu-item-has-children > a.mega-menu-link:after {
+                        content: "\e90e";
+                        position: absolute;
+                        top: 10px;
+                        right: 30px;
+                        display: block;
+                        padding-left: 10px;
+                        font-family: 'wokiee_icons';
+                        font-size: 14px;
+                    }
+                }
+
+                .mobile-menu__back-btn {
+                    display: block;
+                    padding: 15px 16px 13px 29px;
+                    margin-bottom: 15px;
+                    font-family: 'Hind', sans-serif;
+                    font-weight: 400;
+                    color: $gray;
+                    border-bottom: 1px solid $lgray3;
+                    
+                    &:before {
+                        content: "\e90d";
+                        position: relative;
+                        top: 1px;
+                        padding-right: 10px;
+                        font-family: 'wokiee_icons';
+                        font-size: 14px;
+                    }
+
+                    &:hover {
+                        color: $green2;
+                        text-decoration: none;
+                    }
+                }
+
+                .mobile-menu__title {
+                    padding: 9px 27px 9px 30px;
+                    font-family: 'Signika', sans-serif;
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 22px;
+                    color: $dark;
+                }
             }
         }
 
-        #mega-menu-wrap-primary .mega-menu-toggle {
-            width: 40px;
-            height: 40px;
-            background-color: $green2;
-            border-radius: 50%;
-
-            .mega-toggle-blocks-left {
-                flex: 0 0 100%;
-
-                .mega-toggle-block:only-child {
-                    margin: 0 auto;
-                }
-            }
-
-            .mega-toggle-block .mega-toggle-animated {
-                .mega-toggle-animated-box {
-                    width: 18px;
-                    height: 19px;
-                }
-
-                .mega-toggle-animated-inner {
-                    top: 4px;
-                    width: 18px;
-                    height: 2px;
-                    background-color: $white;
+        #mega-menu-wrap-primary {
+            .mega-menu-toggle {
+                width: 40px;
+                height: 40px;
+                background-color: $green2;
+                border-radius: 50%;
     
-                    &:before,
-                    &:after {
+                .mega-toggle-blocks-left {
+                    flex: 0 0 100%;
+    
+                    .mega-toggle-block:only-child {
+                        margin: 0 auto;
+                    }
+                }
+    
+                .mega-toggle-block .mega-toggle-animated {
+                    .mega-toggle-animated-box {
+                        width: 18px;
+                        height: 19px;
+                    }
+    
+                    .mega-toggle-animated-inner {
+                        top: 4px;
                         width: 18px;
                         height: 2px;
                         background-color: $white;
-                    }
-    
-                    &:before {
-                        top: 7px;
-                    }
-    
-                    &:after {
-                        top: 14px;
+        
+                        &:before,
+                        &:after {
+                            width: 18px;
+                            height: 2px;
+                            background-color: $white;
+                        }
+        
+                        &:before {
+                            top: 7px;
+                        }
+        
+                        &:after {
+                            top: 14px;
+                        }
                     }
                 }
             }
