--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -228,6 +228,10 @@
                                 &.flex-wrap {
                                     & > .mega-sub-menu {
                                         flex-wrap: wrap;
+
+                                        .mega-menu-column > .mega-sub-menu {
+                                            flex-wrap: wrap;
+                                        }
                                     }
 
                                     .mega-menu-column {
@@ -330,6 +334,8 @@
             }
 
             #mega-menu-wrap-primary #mega-menu-primary {
+                overflow: hidden !important;
+
                 & > li.mega-menu-item>a.mega-menu-link>img {
                     display: none;
                 }
@@ -346,6 +352,7 @@
                         padding: 0 !important;
                         width: 100%;
                         height: 100vh !important;
+                        overflow-x: hidden;
                         overflow-y: auto;
                         background-color: $white;
                         transform: translate3d(100%, 0, 0);
@@ -367,7 +374,7 @@
                     }
                 }
 
-                li.mega-menu-item {
+                li.mega-menu-item:not(.vk-close-menu) {
                     a.mega-menu-link,
                     & > ul.mega-sub-menu li.mega-menu-column > ul.mega-sub-menu > li.mega-menu-item > a.mega-menu-link {
                         padding: 9px 27px 9px 30px !important;
@@ -398,6 +405,33 @@
                     }
                 }
 
+                li.mega-menu-item.vk-close-menu > a.mega-menu-link {
+                    display: block;
+                    padding: 15px 16px 13px 29px;
+                    margin-bottom: 15px;
+                    font-family: 'Hind', sans-serif;
+                    font-weight: 400;
+                    line-height: 22px;
+                    color: $gray;
+                    border-bottom: 1px solid $lgray3;
+
+                    &:before {
+                        content: "\e9b3";
+                        position: relative;
+                        top: 3px;
+                        padding-right: 6px;
+                        font-family: 'wokiee_icons';
+                        font-size: 14px;
+                        font-weight: 600;
+                        line-height: 1;
+                    }
+
+                    &:hover {
+                        color: $green2;
+                        text-decoration: none;
+                    }
+                }
+
                 .mobile-menu__back-btn {
                     display: block;
                     padding: 15px 16px 13px 29px;
@@ -414,6 +448,7 @@
                         padding-right: 10px;
                         font-family: 'wokiee_icons';
                         font-size: 14px;
+                        font-weight: 600;
                     }
 
                     &:hover {
@@ -473,6 +508,18 @@
         
                         &:after {
                             top: 14px;
+                        }
+                    }
+                }
+
+                &.mega-menu-open {
+                    .mega-toggle-block .mega-toggle-animated {
+                        .mega-toggle-animated-inner {
+                            transform: translate3d(0, 7px, 0) rotate(45deg);
+            
+                            &:after {
+                                transform: translate3d(0, -14px, 0) rotate(-90deg);
+                            }
                         }
                     }
                 }
