button style | editor style

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -11,6 +11,7 @@ $lgray2: #c3c3c3;
 $lgray3: #e9e7e7;
 $orange: #eb8f2e;
 $orange2: #ff8f00;
+$orange3: #f88729;
 $pale: #fff3eb;
 $aliceblue: #f7f8fa;
 $dark: #191919;
