--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -21,3 +21,15 @@
         text-decoration: none;
     }
 }
+
+.wp-block-button .wp-block-button__link {
+    @extend %btn;
+    min-height: 50px;
+    color: $white;
+    background-color: $orange3;
+
+    @include on-event() {
+        text-decoration: none;
+        background-color: $green2;
+    }
+}
