--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -7,6 +7,10 @@ body {
     color: $gray;
 }
 
+main {
+    overflow: hidden;
+}
+
 // @media screen and (min-width: 576px) {
 //     .container {
 //         max-width: 546px;
