--- a/assets/css/custom-editor-style.css
+++ b/assets/css/custom-editor-style.css
@@ -1,5 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Signika:100,200,300,400,500,600,700,800,900&family=Hind:100,200,300,400,500,600,700,800,900&display=swap');
 
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
+body, p {
+    font-family: 'Hind', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Signika', sans-serif;
+    font-weight: 600;
+    color: #005f58;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -10,7 +28,16 @@
     width: calc(33.33% - 8px);
 }
 
-.wp-block-button .wp-block-button__link {
+.row .col-md-6 {
+    width: calc(50% - 8px);
+}
+
+.mx-auto {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.wp-block-button > .wp-block-button__link {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -26,6 +53,18 @@
     transition: .2s ease-in-out;
 }
 
-.wp-block-button .wp-block-button__link:hover {
+.wp-block-button > .wp-block-button__link:hover {
     background-color: #008077;
 }
+
+.wp-block-button.is-style-outline > .wp-block-button__link {
+    color: #f88729;
+    background-color: #fff;
+    border-color: #f88729;
+}
+
+.wp-block-button.is-style-outline > .wp-block-button__link:hover {
+    color: #008077;
+    border-color: #008077;
+}
+
