--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -9,6 +9,7 @@ $gray4: #808080;
 $lgray: #b1aca8;
 $lgray2: #c3c3c3;
 $lgray3: #e9e7e7;
+$lgray4: #eee;
 $orange: #eb8f2e;
 $orange2: #ff8f00;
 $orange3: #f88729;
