--- a/assets/css/custom-editor-style.css
+++ b/assets/css/custom-editor-style.css
@@ -79,3 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 .vetskitchen-dogclub-banner .wp-block-button {
     display: block;
 }
+
+.vetskitchen-tab__content {
+    padding: 20px 0;
+}
