--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -10,13 +10,16 @@ $lgray: #b1aca8;
 $lgray2: #c3c3c3;
 $lgray3: #e9e7e7;
 $lgray4: #eee;
+$lgray5: #ddd;
 $orange: #eb8f2e;
 $orange2: #ff8f00;
 $orange3: #f88729;
+$orange4: #ff8f02;
 $pale: #fff3eb;
 $aliceblue: #f7f8fa;
 $dark: #191919;
 $green2: #008077;
+$green3: #018077;
 $blue: #2879fe;
 $blue2: #2689de;
 $lblue: #2ea4eb;
