--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -3,7 +3,7 @@ body {
     font-family: 'Hind', sans-serif;
     font-size: 15px;
     font-weight: 400;
-    line-height: 22px;
+    line-height: 1.5;
     color: $gray;
 }
 
