--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -34,6 +34,9 @@
     }
 
     &__logo {
+        position: relative;
+        z-index: 1;
+        
         img {
             margin-top: 15px;
             max-width: 158px;
