Contact Us - in progress

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -1,6 +1,7 @@
 
 $primary: #005f58;
 $white: #ffffff;
+$whitelilac: #f7f8fa;
 $black: #000000;
 $gray: #777777;
 $gray2: #4d4d4d;
@@ -24,6 +25,7 @@ $blue: #2879fe;
 $blue2: #2689de;
 $lblue: #2ea4eb;
 $rose: #c3416c;
+$redburn: #dc3232;
 
 //
 $base-url: '../' !default;
