--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,7 +19,8 @@
 // 4. Components
 @import
   'components/button',
-  'components/back-to-top';
+  'components/back-to-top',
+  'components/form';
 
 // 5. Layout-related sections
 @import
