fix not staged commits

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -72,23 +72,25 @@ textarea {
     }
 }
 
-.wpcf7-submit:disabled {
-    opacity: .5;
-    pointer-events: none;
-}
+.wpcf7 form.wpcf7-form {
+    .wpcf7-submit:disabled {
+        opacity: .5;
+        pointer-events: none;
+    }
+    
+    .wpcf7-not-valid-tip {
+        padding-top: 5px;
+        padding-left: 10px;
+        font-size: 14px;
+        color: $redburn;
+    }
 
-.wpcf7-not-valid-tip {
-    padding-top: 5px;
-    padding-left: 10px;
-    font-size: 14px;
-    color: $redburn;
-}
-
-.wpcf7-response-output {
-    padding: 10px;
-    margin: 10px 0;
-    font-size: 16px;
-    text-align: center;
+    .wpcf7-response-output {
+        padding: 10px;
+        margin: 10px 0;
+        font-size: 16px;
+        text-align: center;
+    }
 }
 
 .contact-form {
